# MoviePredictionProject

./: app.py  data_processor.py  ml_models.py  movies_dataset.csv  pyproject.toml  routes.py  utils.py
attached_assets/: movies_dataset.csv
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  index.html  predict.html
